agrego animaciones en la rama-animaciones

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <enlace rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
     <enlacehref="https: //fonts.googleapis.com/css2? family= Josefin+Sans:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;1,400 &familia= Josefin+Losa:ital,peso@0,200;0,300;0,400;0,500;0,600;1,300 &family= Montserrat+Suplentes:wght@100;300;400;500;700 & display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 </head>
 <body>
     <div class="paginaInicio">
@@ -26,18 +28,16 @@
             </div>
         </header>
         <section class="section">
-            <h1 class="ImgInicio" id="TeTentePasteleria">Te Tenté Pastelería</h1>
-            <!-- <img src="./assets/inicio.jpg" alt="imagen portada"> comento para anular modificación con css  -->
+            <h1 id="TeTentePasteleria" class="ImgInicio">Te Tenté Pastelería</h1>
         </section>   
-        <article class="article">
-            <p>   Pastelería artesanal para que te tientes</p>
-            <p>   Cosas ricas, de super calidad</p>
-            <p>   Estamos cumpliendo un sueño día a día, probanos y hacelo tuyo.</p>
-            <p>   Tentate!</p>
+        <article class="article" >
+            <p class="animate__animated animate__zoomInUp">   Pastelería artesanal para que te tientes</p>
+            <p class="animate__animated animate__zoomInUp">   Cosas ricas, de super calidad</p>
+            <p class="animate__animated animate__zoomInUp">   Estamos cumpliendo un sueño día a día, probanos y hacelo tuyo.</p>
+            <p class="animate__animated animate__zoomInUp">   Tentate!</p>
         </article>
         <aside class="aside">
-            <!-- <video src="./assets/video.mp4"></video>    -->
-            <img src="./assets/minit lemon.jpeg" alt="">
+            <img src="./assets/minit lemon.jpeg"  alt="imagen portadas">
         </aside>
         <footer class="footer">
             <div class="titulos">
