--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,6 +11,8 @@
     <enlace rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
     <enlacehref="https: //fonts.googleapis.com/css2? family= Josefin+Sans:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;1,400 &familia= Josefin+Losa:ital,peso@0,200;0,300;0,400;0,500;0,600;1,300 &family= Montserrat+Suplentes:wght@100;300;400;500;700 & display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 </head>
 <body>
     <div class="paginaContacto">
@@ -27,14 +29,14 @@
         </header>
     </div>    
     <section class="galeriaContacto">
-        <h4 id="Contacto">Contacto</h4>
+        <h4 id="Contacto" class="animate__animated animate__fadeInDown">Contacto</h4>
         <div class="listaContacto">
             <div class="divRow">
                 <div class="telefono"><img src="../assets/logotelefono.png" alt="icono telefono"></div> 
                 <p>1133386735</p>    
             </div>
             <div class="locacion"><a class="sinColor" href="https://goo.gl/maps/tur9ddyvNN4LEJr99"><img src="../assets/logoubicacion.png" alt="icono localizacion">Gutierrez 1544, Villa Maipu - San martin</a></div>
-            <div class="maps"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5352.468206659582!2d-58.5218967207244!3d-34.570750702638406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb70f26ec5a59%3A0x42248d55d9ec9795!2sGuti%C3%A9rrez%201544%2C%20Villa%20Maip%C3%BA%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1651541900409!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+            <div class="animate__animated animate__zoomInUp" class="maps"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5352.468206659582!2d-58.5218967207244!3d-34.570750702638406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb70f26ec5a59%3A0x42248d55d9ec9795!2sGuti%C3%A9rrez%201544%2C%20Villa%20Maip%C3%BA%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1651541900409!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         </div>
     </section>
     <footer class="footer">
