--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -11,6 +11,8 @@
     <enlace rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
     <enlacehref="https: //fonts.googleapis.com/css2? family= Josefin+Sans:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;1,400 &familia= Josefin+Losa:ital,peso@0,200;0,300;0,400;0,500;0,600;1,300 &family= Montserrat+Suplentes:wght@100;300;400;500;700 & display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 </head>
 <body>
     <div class="paginaEventos">
@@ -27,17 +29,17 @@
 	    </header>
     </div>    
     <section class="galeriaEventos">
-        <h3 id="Eventos">Eventos</h3>
+        <h3 id="Eventos" class="animate__animated animate__fadeInDown">Eventos</h3>
         <div>
             <article>
-                <p>¿Queres celebrar a lo grande?</p>
-                <p>Tenemos los Box más completos y variados</p>
-                <p>Combinalos como quieras</p>    
+                <p  class="animate__animated animate__zoomInUp">¿Queres celebrar a lo grande?</p>
+                <p  class="animate__animated animate__zoomInUp">Tenemos los Box más completos y variados</p>
+                <p  class="animate__animated animate__zoomInUp">Combinalos como quieras</p>    
             </article>
             <nav class="imagenGaleriaEventos">
-                <img class="bordesRedondeados" src="../assets/BOX1.jpeg" alt="imagen producto">
-                <img class="bordesRedondeados" src="../assets/BOX3.jpeg" alt="imagen producto">
-                <img class="bordesRedondeados" src="../assets/BOX2.jpeg" alt="imagen producto">
+                <img  class="bordesRedondeados" src="../assets/BOX1.jpeg" alt="imagen producto">
+                <img  class="bordesRedondeados" src="../assets/BOX3.jpeg" alt="imagen producto">
+                <img  class="bordesRedondeados" src="../assets/BOX2.jpeg" alt="imagen producto">
             </nav>   
         </div>
     </section>
