--- a/pages/productos.html
+++ b/pages/productos.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href=<enlace rel="preconectar" href="https://fonts.googleapis.com">
     <enlace rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
     <enlacehref="https: //fonts.googleapis.com/css2? family= Josefin+Sans:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;1,400 &familia= Josefin+Losa:ital,peso@0,200;0,300;0,400;0,500;0,600;1,300 &family= Montserrat+Suplentes:wght@100;300;400;500;700 & display=swap" rel="stylesheet">
-        
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 </head>
 <body>
     <div class="paginaProductos" id="header">
@@ -26,46 +28,44 @@
             </div>
         </header>
         <section class="galeria">
-            <div>
-                <h2 id="productos">Productos</h2>   
-            </div>
+            <h2 id="productos" class="animate__animated animate__fadeInDown">Productos</h2>   
             <section class="galeriaDescripcion">
-                <div class="1">
+                <div class="imgUno">
                     <img class="bordesRedondeados" src="../assets/alfajor maicena.jpeg" alt="imagen producto">
                     <p>Alfajor de maicena 6 unidades</p>
                     <p>$500</p>
                 </div>    
-                <div class="2">
+                <div class="imgDos">
                     <img class="bordesRedondeados" src="../assets/alfajor marpl.jpeg" alt="imagen producto">
                     <p>Alfajor marplatence 6 unidades</p>
                     <p>$600</p>
                 </div>
-                <div class="3">
+                <div class="imgTres">
                     <img class="bordesRedondeados" src="../assets/budin carrot.jpeg" alt="imagen producto">
                     <p>Budin carrot cake 500g</p>
                     <p>$750</p>
                 </div>    
-                <div class="4">
+                <div class="imgCuatro">
                     <img class="bordesRedondeados" src="../assets/budin marmolado.jpeg" alt="imagen producto">
                     <p>Budin marmolado 500g</p>
                     <p>$750</p>
                 </div>    
-                <div class="5">
+                <div class="imgCinco">
                     <img class="bordesRedondeados" src="../assets/cuadrado brownie.jpeg" alt="imagen producto">
                     <p>Cuadrado Brownie</p>
                     <p>$300</p>
                 </div>    
-                <div class="6">
+                <div class="imgSeis">
                     <img class="bordesRedondeados" src="../assets/cuadrado cddl.jpeg" alt="imagen producto">
                     <p>Cuadrado Cocodul</p>
                     <p>$300</p>
                 </div>    
-                <div class="7">
+                <div class="imgSiete">
                     <img class="bordesRedondeados"  src="../assets/cuadrado manzana.jpeg" alt="imagen producto">
                     <p>Cuadrado Manzana</p>
                     <p>$350</p>
                 </div>    
-                <div class="8">
+                <div class="imgOcho">
                     <img class="bordesRedondeados" src="../assets/minit brownie.jpeg" alt="imagen producto">
                     <p>Cuadrado Torta brownie</p>
                     <p>$450</p>
