--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto aplicando grids y flex</title>
+    <title>Proyecto ramas-merge-animaciones en githube</title>
 
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href=<enlace rel="preconectar" href="https://fonts.googleapis.com">
