--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto ramas-merge-animaciones en githube</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href=<enlace rel="preconectar" href="https://fonts.googleapis.com">
     <enlace rel="preconectar" href="https://fonts.gstatic.com" crossorigin>
@@ -19,12 +20,29 @@
         <header class="header" id="header">
             <div class="divHeader">
                 <img src="./assets/LOGO COLOR SIN FONDO.png" alt="imagen logo">
-                <ul class="navBar">
-                    <li><a href="#TeTentePasteleria">Inicio</a></li>
-                    <li><a href="pages/productos.html#Productos">Productos</a></li>
-                    <li><a href="pages/eventos.html#Eventos">Eventos</a></li>
-                    <li><a href="pages/contacto.html#Contacto">Contacto</a></li>
-                </ul> 
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <div class="container-fluid centrado">
+                      <button class="navbar-toggler centrado" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#TeTentePasteleria">Inicio</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="./pages/productos.html#Productos">Productos</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="./pages/eventos.html#Eventos">Eventos</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="./pages/contacto.html#Contacto">Contacto</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                </nav>
             </div>
         </header>
         <section class="section">
@@ -60,5 +78,6 @@
             </div>
         </footer> 
     </div>     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
