achico tamaño img.

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -58,13 +58,13 @@
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../assets/BOX1.jpeg" class="d-block w-100 bordesRedondeados" alt="imagen producto">
+                        <img src="../assets/BOX1.jpeg" class="bordesRedondeados d-block w-100 " alt="imagen producto">
                         </div>
                         <div class="carousel-item">
-                        <img src="../assets/BOX3.jpeg" class="d-block w-100 bordesRedondeados" alt="imagen producto">
+                        <img src="../assets/BOX3.jpeg" class="bordesRedondeados d-block w-100 " alt="imagen producto">
                         </div>
                         <div class="carousel-item">
-                        <img src="../assets/BOX2.jpeg" class="d-block w-100 bordesRedondeados" alt="imagen producto">
+                        <img src="../assets/BOX2.jpeg" class="bordesRedondeados d-block w-100 " alt="imagen producto">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
